Fixed Header container height to fix section scroll overlap

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -160,7 +160,7 @@ img {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  height: auto;
+  height: 8vh;
   background: var(--bG-linear-gradient);
   position: fixed;
   top: 0;
